fix: change gap on footer

--- a/shelter/pages/main/scss/layout/_footer.scss
+++ b/shelter/pages/main/scss/layout/_footer.scss
@@ -23,7 +23,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 43px;
+      gap: 44px;
       padding: 0;
     }
   }
