--- a/shelter/pages/pets/scss/style.css
+++ b/shelter/pages/pets/scss/style.css
@@ -527,7 +527,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 43px;
+    gap: 44px;
     padding: 0;
   }
 }
